# cloudi-gen

./: CHANGELOG.md  Cargo.toml  README.md  cloud_init.yaml
.github/: dependabot.yml  release.yml
.github/workflows/: finished_release.yaml  main.yml  release.yaml
src/: cloud_init.rs  main.rs
