[package]
name = "cloudi-gen"
version = "0.2.70"
edition = "2021"
# Avoid publishing to crates.io
publish = ["jontze"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.26.1"
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
